# ssoep-2021-unior-library

./: .gitignore  README.md  main.py  setup.cfg  setup.py
src/unior/: __init__.py  connection.py  data_processing.py  filters.py
tests/: __init__.py
