[metadata]
name = unior
version = 0.0.1
author = leadpogrommer
author_email = author@example.com
description = Python library for interfacing with ПАК "ЮНИор"
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src